src/parser.mjs
// @generated by Peggy 4.0.3.
//
// https://peggyjs.org/



  import { FComment } from '../src/formats/comment'
  import {
  Selector,
  SelCellRange,
  SelCol,
  SelNumberInt,
  SelNumberLastRow,
  SelNumberLastCol,
  SelNumberThisRow,
  SelNumberRange,
  SelNumbers,
  SelRow,
  SelSkip
  } from '../src/selectors'

  import { Cell } from "./cell"
  import { Row, EmptyRow } from "./Row"




function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { data_row: peg$parsedata_row, format_row: peg$parseformat_row, cells_selector: peg$parsecells_selector };
  var peg$startRuleFunction = peg$parsedata_row;

  var peg$c0 = "=empty";
  var peg$c1 = "|";
  var peg$c2 = "\\";
  var peg$c3 = "`";
  var peg$c4 = "$";
  var peg$c5 = "[";
  var peg$c6 = "]";
  var peg$c7 = "#";
  var peg$c8 = ";";
  var peg$c9 = ":";
  var peg$c10 = "r";
  var peg$c11 = "r*";
  var peg$c12 = "c";
  var peg$c13 = "c*";
  var peg$c14 = ",";
  var peg$c15 = "-";
  var peg$c16 = "lastrow";
  var peg$c17 = "lastcol";
  var peg$c18 = "thisrow";
  var peg$c19 = "even";
  var peg$c20 = "odd";
  var peg$c21 = "%%";
  var peg$c22 = "%";
  var peg$c23 = "align(";
  var peg$c24 = ")";
  var peg$c25 = "bg(";
  var peg$c26 = "boxed";
  var peg$c27 = "footer";
  var peg$c28 = "foot";
  var peg$c29 = "header";
  var peg$c30 = "head";
  var peg$c31 = "hlines";
  var peg$c32 = "line";
  var peg$c33 = "s";
  var peg$c34 = "(";
  var peg$c35 = "x";
  var peg$c36 = "xxlarge";
  var peg$c37 = "xlarge";
  var peg$c38 = "large";
  var peg$c39 = "normal";
  var peg$c40 = "small";
  var peg$c41 = "xsmall";
  var peg$c42 = "xxsmall";
  var peg$c43 = "span";
  var peg$c44 = ".";
  var peg$c45 = "vlines";
  var peg$c46 = "width(";
  var peg$c47 = "shade";
  var peg$c48 = "0";

  var peg$r0 = /^[^`]/;
  var peg$r1 = /^[^$]/;
  var peg$r2 = /^[^`$|\\]/;
  var peg$r3 = /^[ \t]/;
  var peg$r4 = /^[~+]/;
  var peg$r5 = /^[ljr]/i;
  var peg$r6 = /^[tmb]/i;
  var peg$r7 = /^[tblr]/;
  var peg$r8 = /^[1-9]/;
  var peg$r9 = /^[a-f0-9]/i;
  var peg$r10 = /^[0-9]/;
  var peg$r11 = /^[a-zA-Z]/;
  var peg$r12 = /^[\-a-zA-Z0-0_]/;

  var peg$e0 = peg$anyExpectation();
  var peg$e1 = peg$literalExpectation("=empty", false);
  var peg$e2 = peg$literalExpectation("|", false);
  var peg$e3 = peg$literalExpectation("\\", false);
  var peg$e4 = peg$literalExpectation("`", false);
  var peg$e5 = peg$classExpectation(["`"], true, false);
  var peg$e6 = peg$literalExpectation("$", false);
  var peg$e7 = peg$classExpectation(["$"], true, false);
  var peg$e8 = peg$classExpectation(["`", "$", "|", "\\"], true, false);
  var peg$e9 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e10 = peg$literalExpectation("[", false);
  var peg$e11 = peg$literalExpectation("]", false);
  var peg$e12 = peg$literalExpectation("#", false);
  var peg$e13 = peg$otherExpectation("selector");
  var peg$e14 = peg$literalExpectation(";", false);
  var peg$e15 = peg$literalExpectation(":", false);
  var peg$e16 = peg$literalExpectation("r", true);
  var peg$e17 = peg$literalExpectation("r*", false);
  var peg$e18 = peg$literalExpectation("c", true);
  var peg$e19 = peg$literalExpectation("c*", false);
  var peg$e20 = peg$literalExpectation(",", false);
  var peg$e21 = peg$literalExpectation("-", false);
  var peg$e22 = peg$classExpectation(["~", "+"], false, false);
  var peg$e23 = peg$literalExpectation("lastrow", false);
  var peg$e24 = peg$literalExpectation("lastcol", false);
  var peg$e25 = peg$literalExpectation("thisrow", false);
  var peg$e26 = peg$literalExpectation("even", false);
  var peg$e27 = peg$literalExpectation("odd", false);
  var peg$e28 = peg$literalExpectation("%%", false);
  var peg$e29 = peg$literalExpectation("%", false);
  var peg$e30 = peg$literalExpectation("align(", false);
  var peg$e31 = peg$literalExpectation(")", false);
  var peg$e32 = peg$classExpectation(["l", "j", "r"], false, true);
  var peg$e33 = peg$classExpectation(["t", "m", "b"], false, true);
  var peg$e34 = peg$literalExpectation("bg(", false);
  var peg$e35 = peg$literalExpectation("boxed", false);
  var peg$e36 = peg$literalExpectation("footer", false);
  var peg$e37 = peg$literalExpectation("foot", false);
  var peg$e38 = peg$literalExpectation("header", false);
  var peg$e39 = peg$literalExpectation("head", false);
  var peg$e40 = peg$literalExpectation("hlines", false);
  var peg$e41 = peg$literalExpectation("line", false);
  var peg$e42 = peg$literalExpectation("s", false);
  var peg$e43 = peg$literalExpectation("(", false);
  var peg$e44 = peg$literalExpectation("x", false);
  var peg$e45 = peg$classExpectation(["t", "b", "l", "r"], false, false);
  var peg$e46 = peg$literalExpectation("xxlarge", false);
  var peg$e47 = peg$literalExpectation("xlarge", false);
  var peg$e48 = peg$literalExpectation("large", false);
  var peg$e49 = peg$literalExpectation("normal", false);
  var peg$e50 = peg$literalExpectation("small", false);
  var peg$e51 = peg$literalExpectation("xsmall", false);
  var peg$e52 = peg$literalExpectation("xxsmall", false);
  var peg$e53 = peg$literalExpectation("span", false);
  var peg$e54 = peg$literalExpectation(".", false);
  var peg$e55 = peg$literalExpectation("vlines", false);
  var peg$e56 = peg$literalExpectation("width(", false);
  var peg$e57 = peg$literalExpectation("shade", false);
  var peg$e58 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e59 = peg$classExpectation([["a", "f"], ["0", "9"]], false, true);
  var peg$e60 = peg$literalExpectation("0", false);
  var peg$e61 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e62 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e63 = peg$classExpectation(["-", ["a", "z"], ["A", "Z"], ["0", "0"], "_"], false, false);

  var peg$f0 = function(row) { return `unknown: ${row.join("")}` };
  var peg$f1 = function() { return EmptyRow };
  var peg$f2 = function(cells) {
    return new Row(cells)
    };
  var peg$f3 = function(cell) { return new Cell(cell) };
  var peg$f4 = function() { return new Cell("") };
  var peg$f5 = function(content) { return content.join("") };
  var peg$f6 = function(ch) { return [ch] };
  var peg$f7 = function(fragment) { return fragment.join("") };
  var peg$f8 = function(comment) { return new FComment(comment.join("")) };
  var peg$f9 = function() { return new FComment("") };
  var peg$f10 = function(selector) {
  console.log(new Selector(selector));
  return new Selector(selector) };
  var peg$f11 = function(row, col) { return new SelCellRange(row,  col) };
  var peg$f12 = function(row) { return new SelCellRange(row,  null) };
  var peg$f13 = function(col) { return new SelCellRange(null, col) };
  var peg$f14 = function(numbers) { return new SelRow(numbers) };
  var peg$f15 = function() { return SelRow.all_rows()   };
  var peg$f16 = function(numbers) { return new SelCol(numbers) };
  var peg$f17 = function() { return SelCol.all_rows()   };
  var peg$f18 = function(number_range) {
      return new SelNumbers(number_range)
    };
  var peg$f19 = function(n1, n2, skip) {
    return new SelSkip(new SelNumberRange(n1, n2))
    };
  var peg$f20 = function(n1, n2) {
      return new SelNumberRange(n1, n2)
    };
  var peg$f21 = function(n1) {
      return new SelNumberRange(n1, n1)
    };
  var peg$f22 = function(number, op, offset) {
      return new SelAdjustedNumber(number, op, offset)
    };
  var peg$f23 = function(number) {
      return number;
    };
  var peg$f24 = function(value) { return new SelNumberInt(value) };
  var peg$f25 = function() { return new SelNumberLastRow() };
  var peg$f26 = function() { return new SelNumberLastCol() };
  var peg$f27 = function() { return new SelNumberThisRow() };
  var peg$f28 = function(rel, mod) {
      return new SelSkip(rel_or_abs, 0, int)
    };
  var peg$f29 = function(rel) {
      return new SelSkip(rel_or_abs, 0, 2)
    };
  var peg$f30 = function(rel) {
      return new SelSkip(rel_or_abs, 1, 2)
    };
  var peg$f31 = function() {
      return new SelSkip("abs", 0, 2)
    };
  var peg$f32 = function() {
      return new SelSkip("abs", 1, 2)
    };
  var peg$f33 = function() { return "rel" };
  var peg$f34 = function() { return "abs" };
  var peg$f35 = function() { return parseInt(text()) };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsedata_row() {
    var s0;

    s0 = peg$parsecontent_row();
    if (s0 === peg$FAILED) {
      s0 = peg$parseunknown_table_row();
    }

    return s0;
  }

  function peg$parseunknown_table_row() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    if (input.length > peg$currPos) {
      s3 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s3 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      if (input.length > peg$currPos) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }
    if (s2.length < 1) {
      peg$currPos = s1;
      s1 = peg$FAILED;
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsecontent_row() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 6) === peg$c0) {
      s2 = peg$c0;
      peg$currPos += 6;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      if (input.charCodeAt(peg$currPos) === 124) {
        s2 = peg$c1;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s3 = [];
      s4 = peg$parsecell();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        s5 = peg$currPos;
        s6 = peg$parse_();
        if (input.charCodeAt(peg$currPos) === 124) {
          s7 = peg$c1;
          peg$currPos++;
        } else {
          s7 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s7 !== peg$FAILED) {
          s6 = [s6, s7];
          s5 = s6;
        } else {
          peg$currPos = s5;
          s5 = peg$FAILED;
        }
        if (s5 !== peg$FAILED) {
          s5 = peg$parsecell();
          if (s5 === peg$FAILED) {
            peg$currPos = s4;
            s4 = peg$FAILED;
          } else {
            s4 = s5;
          }
        } else {
          s4 = s5;
        }
      }
      s4 = peg$parse_();
      s5 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 124) {
        s6 = peg$c1;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s6 !== peg$FAILED) {
        s7 = peg$parse_();
        s6 = [s6, s7];
        s5 = s6;
      } else {
        peg$currPos = s5;
        s5 = peg$FAILED;
      }
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f2(s3);
    }

    return s0;
  }

  function peg$parsecell() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parsecell_content();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f3(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parse_();
      s2 = peg$currPos;
      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 124) {
        s3 = peg$c1;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      peg$silentFails--;
      if (s3 !== peg$FAILED) {
        peg$currPos = s2;
        s2 = undefined;
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsecell_content() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = [];
    s3 = peg$parsecell_fragment();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parsecell_fragment();
    }
    if (s2.length < 1) {
      peg$currPos = s1;
      s1 = peg$FAILED;
    } else {
      s1 = s2;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f5(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsecell_fragment() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 92) {
      s2 = peg$c2;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s2 !== peg$FAILED) {
      if (input.length > peg$currPos) {
        s3 = input.charAt(peg$currPos);
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s1;
        s1 = peg$f6(s3);
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 96) {
        s2 = peg$c3;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        s4 = [];
        s5 = input.charAt(peg$currPos);
        if (peg$r0.test(s5)) {
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s5 !== peg$FAILED) {
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = input.charAt(peg$currPos);
            if (peg$r0.test(s5)) {
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e5); }
            }
          }
        } else {
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s3 = input.substring(s3, peg$currPos);
        } else {
          s3 = s4;
        }
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 96) {
            s4 = peg$c3;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 36) {
          s2 = peg$c4;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = [];
          s5 = input.charAt(peg$currPos);
          if (peg$r1.test(s5)) {
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e7); }
          }
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = input.charAt(peg$currPos);
              if (peg$r1.test(s5)) {
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e7); }
              }
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s3 = input.substring(s3, peg$currPos);
          } else {
            s3 = s4;
          }
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 36) {
              s4 = peg$c4;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e6); }
            }
            if (s4 !== peg$FAILED) {
              s2 = [s2, s3, s4];
              s1 = s2;
            } else {
              peg$currPos = s1;
              s1 = peg$FAILED;
            }
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
        if (s1 === peg$FAILED) {
          s1 = [];
          s2 = input.charAt(peg$currPos);
          if (peg$r2.test(s2)) {
            peg$currPos++;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e8); }
          }
          if (s2 !== peg$FAILED) {
            while (s2 !== peg$FAILED) {
              s1.push(s2);
              s2 = input.charAt(peg$currPos);
              if (peg$r2.test(s2)) {
                peg$currPos++;
              } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e8); }
              }
            }
          } else {
            s1 = peg$FAILED;
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f7(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r3.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e9); }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = input.charAt(peg$currPos);
      if (peg$r3.test(s1)) {
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e9); }
      }
    }

    return s0;
  }

  function peg$parseformat_row() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
